--- a/css/style.css
+++ b/css/style.css
@@ -58,18 +58,22 @@
 .home {
   display: flex;
   align-items: center;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   border: 1px solid;
-  padding: 67px 6px 0;
+  padding: 52px 6px 0;
   /* background-image: url("../assets/VideoCapture_20240410-183512.jpg"); */
   background-size: cover;
+  /* background-color: blueviolet; */
 }
 .home-content {
   height: 40rem;
+  width: 100%;
   padding: 3rem 0rem 0;
+  /* background-color: aqua; */
 }
 .mboh {
   margin-left: 5rem;
+  /* background-color: red; */
 }
 .home-content h1 {
   font-size: 2rem;
@@ -80,6 +84,12 @@
   line-height: 2;
   font-size: 18px;
 }
+.hero-image {
+  width: 100%;
+  height: 30rem;
+  border: 1px solid;
+  /* background-color: chartreuse; */
+}
 /* home content styling start */
 
 /* profile styling start */
@@ -87,6 +97,7 @@
   min-height: 30rem;
   padding: 67px 1rem 0;
   border: 1px solid;
+  /* background-color: salmon; */
 }
 .profile-content {
   padding: 1.5rem 7rem 1rem;
@@ -218,7 +229,7 @@ button {
 .info-content p {
   line-height: 1.3;
 }
-.info-content p span {
+.info-content p .span {
   font-weight: 600;
 }
 /* message styling end */
