--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: "poppins", sans-serif;
 }
-
+body {
+  background-color: #1c1c1c;
+}
 /* header styling start */
 .header {
   position: fixed;
@@ -15,9 +17,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid;
-  /* background-color: rgba(1, 1, 1, 0.4); */
-  background: #fff;
+  border-bottom: 1px solid #0ef;
+  background-color: rgba(1, 1, 1, 0.9);
 }
 .logo {
   width: 50px;
@@ -32,11 +33,11 @@
   padding: 0 32px;
   text-decoration: none;
   font-size: 16px;
-  color: black;
+  color: #ededed;
   font-weight: 500;
 }
 .text-nav > a:hover {
-  color: blue;
+  color: #0ef;
 }
 .text-nav > a::after {
   content: "";
@@ -45,7 +46,7 @@
   border-bottom: 0.1rem solid;
   transform: scaleX(0);
   transition: 0.2s;
-  color: blue;
+  color: #0ef;
 }
 .text-nav > a:hover::after {
   transform: scaleX(1);
@@ -58,31 +59,29 @@
 .home {
   display: flex;
   align-items: center;
-  /* min-height: 100vh; */
   border: 1px solid;
   padding: 52px 6px 0;
-  /* background-image: url("../assets/VideoCapture_20240410-183512.jpg"); */
-  background-size: cover;
-  /* background-color: blueviolet; */
 }
 .home-content {
   height: 40rem;
   width: 100%;
   padding: 3rem 0rem 0;
-  /* background-color: aqua; */
 }
 .mboh {
   margin-left: 5rem;
-  /* background-color: red; */
 }
 .home-content h1 {
   font-size: 2rem;
   line-height: 1.5;
+  color: #fff;
   text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.6);
 }
 .home-content .mboh p {
   line-height: 2;
   font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: #0ef;
 }
 .hero-image-wrapper {
   display: flex;
@@ -90,16 +89,28 @@
   align-items: center;
   width: 100%;
   height: 30rem;
-  border: 1px solid;
 }
 
-.left-btn,
-.right-btn {
+.btn-bg {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 60px;
   height: 70px;
+}
+.slider {
+  width: 100%;
+  height: 100%;
+  background-color: burlywood;
+}
+.slider img {
+  height: 100%;
+  width: auto;
+  transition: 0.3s;
+}
+.hero-img {
+  width: 800px;
+  height: 100%;
 }
 
 .hero-image-wrapper button {
@@ -111,9 +122,13 @@
   outline: none;
   background-color: transparent;
 }
-.left-btn i,
-.right-btn i {
-  font-size: 60px;
+.btn-bg i {
+  font-size: 50px;
+  transition: 0.2s;
+  color: #fff;
+}
+.btn-bg i:hover {
+  color: #0ef;
 }
 /* home content styling start */
 
@@ -121,8 +136,6 @@
 .profile {
   min-height: 30rem;
   padding: 67px 1rem 0;
-  border: 1px solid;
-  /* background-color: salmon; */
 }
 .profile-content {
   padding: 1.5rem 7rem 1rem;
@@ -130,6 +143,7 @@
 .profile-content h1 {
   font-size: 28px;
   font-weight: 600;
+  color: #0ef;
 }
 .profile-items-wrapper {
   display: flex;
@@ -156,15 +170,16 @@
 .message {
   padding: 67px 1rem 0;
   min-height: 34rem;
-  border: 1px solid;
 }
 .message-content {
+  border-top: 1px solid #0ef;
   padding: 3rem 5rem;
 }
 .message-content h1 {
   font-size: 30px;
   font-weight: 600;
-  margin-bottom: 1.7rem;
+  margin-bottom: 3rem;
+  color: #0ef;
 }
 .form-container {
   display: flex;
@@ -185,6 +200,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  color: #fff;
 }
 .form-item {
   display: flex;
@@ -199,9 +215,12 @@
   padding-left: 0.5rem;
 }
 input {
+  padding: 0.3rem;
   width: 100%;
   height: 2.5rem;
   font-size: 18px;
+  border: 1px solid;
+  border-radius: 5px;
 }
 .jenis-kelamin input {
   width: 1.2rem;
@@ -230,15 +249,33 @@ textarea {
   height: 7rem;
   font-size: 18px;
   resize: none;
+  border: 1px solid;
+  border-radius: 5px;
+  padding: 0.3rem;
 }
-button {
+.btn button {
   margin-top: 1rem;
   width: 100%;
   height: 2.5rem;
   outline: none;
   border-radius: 4px;
+  font-size: 18px;
+  font-weight: 600;
+  box-shadow: 0px 1px 0px 0px #f0f7fa;
+  background: linear-gradient(to bottom, #00eeff 5%, #019ad2 100%);
+  background-color: #00eeff;
+  border: 1px solid #057fd0;
+  text-shadow: 0px -1px 0px #5b6178;
+  cursor: pointer;
 }
-
+.btn button:hover {
+  background: linear-gradient(to bottom, #019ad2 5%, #00eeff 100%);
+  background-color: #019ad2;
+}
+.btn button:active {
+  position: relative;
+  top: 1px;
+}
 .info {
   flex: 5.5;
   display: flex;
@@ -247,15 +284,18 @@ button {
   width: 75rem;
   left: 0;
   bottom: 0;
-  border: 1px solid;
+  border: 1px solid #0ef;
+  box-shadow: 0 0 10px 4px #0ef;
   padding: 3rem 2rem;
   margin-right: -2rem;
 }
 .info-content p {
   line-height: 1.3;
+  color: #fff;
 }
 .info-content p .span {
   font-weight: 600;
+  color: #fff;
 }
 /* message styling end */
 
@@ -267,7 +307,8 @@ footer {
   padding: 1rem;
   width: 100%;
   height: 4rem;
-  border: 1px solid;
+  border-top: 1px solid #0ef;
+  margin-top: 1rem;
 }
 footer p {
   font-weight: 400;
@@ -290,6 +331,11 @@ footer p {
   }
   #hamburger-menu i {
     font-size: 35px;
+    color: #fff;
+    cursor: pointer;
+  }
+  #hamburger-menu i:hover {
+    color: #0ef;
   }
   .icon-nav a:hover {
     color: blue;
@@ -298,7 +344,7 @@ footer p {
     position: absolute;
     top: 100%;
     right: -110%;
-    background-color: yellow;
+    background-color: rgba(1, 1, 1, 0.9);
     width: 25rem;
     height: 100vh;
     transition: 0.3s;
@@ -327,17 +373,3 @@ footer p {
 }
 
 /* slide */
-
-.slider {
-  width: 100%;
-  height: 100%;
-  background-color: burlywood;
-}
-.slider img {
-  height: 100%;
-  width: auto;
-}
-.hero-img {
-  width: 800px;
-  height: 100%;
-}
